--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-Django==3.1.6
-python-dotenv==0.15.0
+Django==3.0.5
+gunicorn==19.9.0
+psycopg2-binary==2.8.5
+djangorestframework==3.11.0
+drf-yasg==1.17.1
+factory_boy==2.12.0
+django-cors-headers==3.4.0
+django-filter==2.3.0
+djangorestframework-simplejwt==4.6.0
+validate-docbr==1.8.2
 celery==4.4.7
-SQLAlchemy==1.3.23
 flower==0.9.7
